objects/Mapping__c.object
<CustomObject>
    <fields>
        <fullName>AE_User__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AE User</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria. Please ensure that the &quot;Team Function&quot; field has been populated correctly on the AE User record.</errorMessage>
            <filterItems>
                <field>AE_SE_Mappings__c.User__r.Team_Function__c</field>
                <operation>equals</operation>
                <value>AE</value>
            </filterItems>
            <infoMessage>If</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AE_SE_Mappings__c</referenceTo>
        <relationshipLabel>SE Mappings</relationshipLabel>
        <relationshipName>Mapping1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration_days__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &quot;New&quot;), 0,  IF( ISPICKVAL(Status__c, &quot;Active&quot;), TODAY() -  Start_Date__c,  End_Date__c -Start_Date__c))</formula>
        <label>Duration (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prior_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prior Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SE_User__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>SE User</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria. Please ensure that the &apos;Team Function&apos; field is populated on the SE User record</errorMessage>
            <filterItems>
                <field>AE_SE_Mappings__c.User__r.Team_Function__c</field>
                <operation>equals</operation>
                <value>SE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AE_SE_Mappings__c</referenceTo>
        <relationshipLabel>AE Mappings</relationshipLabel>
        <relationshipName>Mapping</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;New&quot;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Vertical__c</fullName>
        <label>Sub-Vertical</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Vertical__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Copado Robotic Testing</fullName>
                </value>
                <value>
                    <fullName>ClickDeploy, Non-AOV</fullName>
                </value>
                <value>
                    <fullName>High Tech</fullName>
                </value>
                <value>
                    <fullName>High Tech Strategic</fullName>
                </value>
                <value>
                    <fullName>Media+Com+PS+EDU  / CG / Cons+Real Est</fullName>
                </value>
                <value>
                    <fullName>Pharma/MedTech</fullName>
                </value>
                <value>
                    <fullName>Payer/Provider</fullName>
                </value>
                <value>
                    <fullName>Government and Public Sector</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Wealth, Banking, Mortgage &amp; Lending</fullName>
                </value>
                <value>
                    <fullName>ANZ</fullName>
                </value>
                <value>
                    <fullName>UK, Sweden, Norway, Denmark &amp; Finland</fullName>
                </value>
                <value>
                    <fullName>France, Belguim, Spain, Switzerland (FR)</fullName>
                </value>
                <value>
                    <fullName>Germany, Switzerland (DE), Netherlands</fullName>
                </value>
                <value>
                    <fullName>MFG and Energy</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vertical_RVP_ID__c</fullName>
        <formula>CASE(Vertical__c,
&quot;US CRT&quot;, $CustomMetadata.Vertical_RVP__mdt.US_CRT_RVP.RVP_UserId__c, 
&quot;Essentials &amp; Non-AOV&quot;, $CustomMetadata.Vertical_RVP__mdt.Essentials_Non_AOV_RVP.RVP_UserId__c,
&quot;Core&quot;, $CustomMetadata.Vertical_RVP__mdt.Core_RVP.RVP_UserId__c,
&quot;MFG and Energy&quot;, $CustomMetadata.Vertical_RVP__mdt.MFG_Energy_RVP.RVP_UserId__c,
&quot;Government&quot;, $CustomMetadata.Vertical_RVP__mdt.Government_RVP.RVP_UserId__c,
&quot;FINS&quot;, $CustomMetadata.Vertical_RVP__mdt.FINS_RVP.RVP_UserId__c, 
&quot;ANZ&quot;, $CustomMetadata.Vertical_RVP__mdt.ANZ_RVP.RVP_UserId__c, 
&quot;UK &amp; North Europe&quot;, $CustomMetadata.Vertical_RVP__mdt.UK_North_Europe_RVP.RVP_UserId__c,
&quot;South Europe&quot;, $CustomMetadata.Vertical_RVP__mdt.South_Europe_RVP.RVP_UserId__c,
&quot;Central Europe&quot;, $CustomMetadata.Vertical_RVP__mdt.Central_Europe_RVP.RVP_UserId__c,
&quot;Italy&quot;, $CustomMetadata.Vertical_RVP__mdt.Italy_RVP.RVP_UserId__c,
&quot;EMEA CRT&quot;, $CustomMetadata.Vertical_RVP__mdt.EMEA_CRT_RVP.RVP_UserId__c,

&quot;High Tech&quot;, 
IF( ISPICKVAL(Sub_Vertical__c,&quot;High Tech&quot;), $CustomMetadata.Vertical_RVP__mdt.High_Tech_RVP.RVP_UserId__c, $CustomMetadata.Vertical_RVP__mdt.High_Tech_Strategic_RVP.RVP_UserId__c), 

&quot;HLS&quot;,
IF(ISPICKVAL(Sub_Vertical__c, &quot;Pharma/MedTech&quot;),
$CustomMetadata.Vertical_RVP__mdt.HLS_Pharma_RVP.RVP_UserId__c,
$CustomMetadata.Vertical_RVP__mdt.HLS_Payer_RVP.RVP_UserId__c),  

&quot;&quot;)</formula>
        <label>Vertical RVP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical_RVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vertical RVP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vertical_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US CRT</fullName>
                </value>
                <value>
                    <fullName>Essentials &amp; Non-AOV</fullName>
                </value>
                <value>
                    <fullName>High Tech</fullName>
                </value>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>MFG and Energy</fullName>
                </value>
                <value>
                    <fullName>HLS</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>FINS</fullName>
                </value>
                <value>
                    <fullName>ANZ</fullName>
                </value>
                <value>
                    <fullName>UK &amp; North Europe</fullName>
                </value>
                <value>
                    <fullName>South Europe</fullName>
                </value>
                <value>
                    <fullName>Central Europe</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>EMEA CRT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AE_User__c</columns>
        <columns>SE_User__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <columns>End_Date__c</columns>
        <columns>Primary__c</columns>
        <columns>Prior_Primary__c</columns>
        <columns>Vertical__c</columns>
        <columns>Sub_Vertical__c</columns>
        <columns>Vertical_RVP__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mappings</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>End_date_must_be_later_than_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c &gt;=  End_Date__c</errorConditionFormula>
        <errorMessage>Start Date must be before the End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Essentials_Non_AOV_Cannot_be_primary</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Vertical__c, &quot;Essentials &amp; Non-AOV&quot;),
 Primary__c = TRUE
)</errorConditionFormula>
        <errorDisplayField>Primary__c</errorDisplayField>
        <errorMessage>Essentials &amp; Non-AOV vertical mappings cannot be marked as primary.</errorMessage>
    </validationRules>
</CustomObject>